     CHANGES in PHANGORN VERSION 1.99-14

BUG FIXES

    o as.splits.networx did not wor properly for 4 taxa 

      (reported by Laurélène Faye)

    o RF.dist returned sometimes wrong values

      (reported by Andres Dajles)



     CHANGES in PHANGORN VERSION 1.99-13

OTHER CHANGES

    o improved importing and conversion of data

    o improved stability of pml and optim.pml



     CHANGES in PHANGORN VERSION 1.99-12

NEW FEATURES

    o added neighborNet algorithm (Bryant and Moulton 2004)

      very experimental at the moment

BUG FIXES

    o plotBS was not working correctly if bootstraped trees are in 

      compressed form (bug report by Tobias Müller)

OTHER CHANGES

    o many splits and networx methods have been improved 

      and a vignette was added

    o phangorn now suggests only the rgl and not depends on it 

      to avoid problems on different platforms (suggestion by Matt Pennell)

    o new package dependencies knitr for html vignettes and nnls



     CHANGES in PHANGORN VERSION 1.99-10

BUG FIXES
 
    o reorder.networx may not work as expected

    o Gamma model was not working properly in simSeq.pml 



     CHANGES in PHANGORN VERSION 1.99-9

BUG FIXES

    o bug fixes for clang environment

    o midpoint takes care of node labels



     CHANGES in PHANGORN VERSION 1.99-8 

NEW FEATURES

    o pmlPart got an argument rooted to handle rooted trees 

    o simSeq is now a generic function. This simplifies the  

      construcion of parametric bootstrap test
 
    o SOWH.test (very experimental)

    o as.networx and plot.networx improved considerably 

      (often generate networks less edges) 

      and planar graphs are now plotted nicely

BUG FIXES

    o fixed some bugs in ancestral.pars 

    o amino acid model "Blosum62" was not working

OTHER CHANGES

    o improvements to read.nexus.splits, write.nexus.splits to 

      be more consistant with splitstree

    o splitsNetwork got an additional argument splits
